<resources>
    <string name="app_name">Healthy foods</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="name_food">Nombre</string>
    <string name="calorias_food">Calorias</string>
    <string name="detail_food">Detalle</string>
    <string name="url">Url Imagen</string>
    <string name="imagen_layout">imagen que representa el layout</string>
    <string name="autofillHintsName">Es el nombre del alimento</string>
    <string name="autofillHintsUrl">Es la url de la imagen de food</string>

    <string name="contentDesc">Imagen que representa el layout</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titleDes">"Desayunos y Meriendas"</string>
    <string name="titleCol">"Colaciones Saludables"</string>
    <string name="titleAlm">"Almuerzos y Cenas"</string>
    <string name="imageDes">Imagen de desayunos y meriendas</string>
    <string name="imageCol">Imagen de Colaciones</string>
    <string name="imageAlm">Imagen de almuerzos y cenas</string>

    <string name="loginImg">imagen logo app</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>

    <string name="register">Complete sus Datos</string>

    <string name="add_food">Agregar</string>
    <string name="shr_logo_content_description">Imagen Logo Chef</string>


    <string name="objetivo_cal">Calorias Consumidas del Día: </string>
    <string name="edt_cal_cons">Calorias Consumidas: </string>
    <string name="btn_realizadas">Ver Mis Comidas</string>
    <string name="button_next">siguiente</string>
    <string name="button_cancel">Cancelar</string>
    <string name="button_volver">Volver</string>
    <string name="button_add">Seleccionar</string>

    <string name="bar_chart">Bar Chart</string>
    <string name="grafico_progreso">Grafico progreso</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="email">Email</string>
    <string name="telefono">Telefono</string>

</resources>