<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayoutSnack"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddSnacksFragment">

    <ImageView
        android:id="@+id/img_chef_colac"
        android:layout_width="262dp"
        android:layout_height="316dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="@string/autofillHintsUrl"
        android:contentDescription="@string/imagen_layout"
        android:src="@drawable/chef_cartel"
        app:layout_constraintBottom_toTopOf="@+id/edt_name_snack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_name_snack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="@string/autofillHintsName"
        android:ems="10"
        android:hint="@string/name_food"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/edt_calorias_snack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_chef_colac" />

    <EditText
        android:id="@+id/edt_calorias_snack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="son las calorías que contiene el plato"
        android:ems="10"
        android:hint="@string/calorias_food"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/edt_urlImagen_snack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_name_snack" />

    <EditText
        android:id="@+id/edt_urlImagen_snack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="@string/autofillHintsUrl"
        android:ems="10"
        android:hint="@string/url"
        android:inputType="textUri|textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/edt_descrip_snack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_calorias_snack" />

    <EditText
        android:id="@+id/edt_descrip_snack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="detalle de como se compone el alimento"
        android:ems="10"
        android:hint="@string/detail_food"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_urlImagen_snack" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_descrip_snack">

        <Button
            android:id="@+id/btn_cancel_snack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="@string/button_cancel" />

        <Space
            android:layout_width="8dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_add_snack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/add_food" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>