<?xml version="1.0" encoding="utf-8"?>
    <!-- TODO: Update blank fragment layout -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollMenu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PrincipalFragment">

    <LinearLayout
        android:id="@+id/contenedorMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:elevation="12dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_title_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titleDes"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/img_des_mer"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/imageDes"
            android:elevation="12dp"
            android:src="@drawable/desayunos" />

        <TextView
            android:id="@+id/txt_title_alm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titleAlm"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="@string/titleAlm" />

        <ImageButton
            android:id="@+id/img_alm_cen"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/imageAlm"
            android:elevation="12dp"
            android:src="@drawable/almuerzos" />

        <TextView
            android:id="@+id/txt_title_colac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titleCol"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="@string/titleCol" />

        <ImageButton
            android:id="@+id/img_colac"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/imageCol"
            android:elevation="12dp"
            android:src="@drawable/colaciones" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

    </LinearLayout>
</ScrollView>
