<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayoutAddFood"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddFoodFragment">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/img_chef_food"
        android:layout_width="0dp"
        android:layout_height="280dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/imagen_layout"
        android:src="@drawable/cocinero"
        app:layout_constraintBottom_toTopOf="@+id/lin_lay_vert_add_food"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/lin_lay_vert_add_food"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_chef_food">

        <EditText
            android:id="@+id/edt_nombre_food"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="@string/autofillHintsName"
            android:ems="10"
            android:hint="@string/name_food"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edt_url_img_food"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="@string/autofillHintsUrl"
            android:ems="10"
            android:hint="@string/url"
            android:inputType="textUri|textPersonName" />

        <EditText
            android:id="@+id/edt_detail_food"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="detalle de como se compone el alimento"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/detail_food"
            android:inputType="textMultiLine" />

        <EditText
            android:id="@+id/edt_calorias_food"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="son las calorías que contiene el plato"
            android:ems="10"
            android:hint="@string/calorias_food"
            android:inputType="number" />

        <LinearLayout
            android:id="@+id/lin_lay_hor_food"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/check_type_cc_food"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Con Carne" />

            <CheckBox
                android:id="@+id/check_type_verd_food"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Vegetariano" />

            <CheckBox
                android:id="@+id/check_type_veg_food"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Vegano" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lin_lay_vert_add_food">

        <Button
            android:id="@+id/btn_cancel_add_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="@string/button_cancel" />

        <Space
            android:layout_width="6dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_accept_add_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/add_food" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>